fix: overflow-x hidden

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,10 @@
 @import './base.css';
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap');
 
+#app {
+  overflow-x: hidden;
+}
+
 /* #app { */
 /*   max-width: 1280px; */
 /*   margin: 0 auto; */
